--- a/index.html
+++ b/index.html
@@ -3,29 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    
+
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>index</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="medium"><a href="">Studio</a></li>
+          <li class="medium"><a href="">Portfolio</a></li>
+          <li class="medium"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="link">
+          <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="section_1">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
       <section>
         <h2>Our goals</h2>
@@ -60,7 +71,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -69,6 +80,7 @@
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
+              class="team"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -79,6 +91,7 @@
               alt="Photo Tom Ford"
               width="264"
               height="260"
+              class="team"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -89,6 +102,7 @@
               alt="Photo Camila Garcia"
               width="264"
               height="260"
+              class="team"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -99,19 +113,90 @@
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
+              class="team"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Our Portofolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking_app.jpg"
+              alt="Photo Banking App"
+              width="360"
+              height="300"
+              clas="portfolio"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless_payment.jpg"
+              alt="Photo Cashless Payment"
+              width="360"
+              height="300"
+              clas="portfolio"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation_app.jpg"
+              alt="Photo Meditation App"
+              width="360"
+              height="300"
+              clas="portfolio"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi_service.jpg"
+              alt="Photo Taxi Service"
+              width="360"
+              height="300"
+              clas="portfolio"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen_illustrations.jpg"
+              alt="Photo Screen Illustrations"
+              width="360"
+              height="300"
+              clas="portfolio"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/online_courses.jpg"
+              alt="Photo Online Courses"
+              width="360"
+              height="300"
+              clas="portfolio"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
-      </p>
+    <footer class="footer">
+      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
+      <div>Increase the flow of customers and sales for your business with digital
+        marketing &amp; growth solutions.</div>
+      
     </footer>
   </body>
 </html>
