--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
 
     <link rel="stylesheet" href="./css/styles.css" />
     <title>index</title>
@@ -21,12 +33,12 @@
       <nav>
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
-          <li class="medium"><a href="">Studio</a></li>
+          <li class="medium"><a href="./index.html" class="menu">Studio</a></li>
           <li class="medium"><a href="">Portfolio</a></li>
           <li class="medium"><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="link">
           <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
@@ -34,16 +46,16 @@
       </address>
     </header>
     <main>
-      <section class="section_1">
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="section1">
+        <h1 class="title1">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <section>
         <h2>Our goals</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title2">Strategy</h3>
+            <p class="section2_paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -72,7 +84,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="titlu2">Our Team</h2>
         <ul>
           <li>
             <img
@@ -80,10 +92,10 @@
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
-              class="team"
+             class="team"
             />
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="our_team">Product Designer</p>
           </li>
           <li>
             <img
@@ -94,7 +106,7 @@
               class="team"
             />
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="our_team">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -105,7 +117,7 @@
               class="team"
             />
             <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="our_team">Marketing</p>
           </li>
           <li>
             <img
@@ -116,23 +128,23 @@
               class="team"
             />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="our_team">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portofolio</h2>
+        <h2 class="title4">Our Portofolio</h2>
         <ul>
-          <li>
+          <li class="our_portofolio">
             <img
               src="./images/banking_app.jpg"
               alt="Photo Banking App"
               width="360"
               height="300"
-              clas="portfolio"
+              class="portfolio"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="subtitle4">Banking App</h3>
+            <p class="portofolio_paragraph">App</p>
           </li>
           <li>
             <img
@@ -140,7 +152,7 @@
               alt="Photo Cashless Payment"
               width="360"
               height="300"
-              clas="portfolio"
+              class="portfolio"
             />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
@@ -151,7 +163,7 @@
               alt="Photo Meditation App"
               width="360"
               height="300"
-              clas="portfolio"
+              class="portfolio"
             />
             <h3>Meditation App</h3>
             <p>App</p>
@@ -162,7 +174,7 @@
               alt="Photo Taxi Service"
               width="360"
               height="300"
-              clas="portfolio"
+              class="portfolio"
             />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
@@ -173,7 +185,7 @@
               alt="Photo Screen Illustrations"
               width="360"
               height="300"
-              clas="portfolio"
+              class="portfolio"
             />
             <h3>Screen Illustrations</h3>
             <p>Marketing</p>
@@ -184,7 +196,7 @@
               alt="Photo Online Courses"
               width="360"
               height="300"
-              clas="portfolio"
+              class="portfolio"
             />
             <h3>Online Courses</h3>
             <p>Marketing</p>
@@ -194,8 +206,8 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
-      <div>Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.</div>
+      <p class="footer_paragraph">Increase the flow of customers and sales for your business with digital
+        marketing &amp; growth solutions.</p>
       
     </footer>
   </body>
