--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
           <li class="medium"><a href="./index.html" class="menu">Studio</a></li>
-          <li class="medium"><a href="">Portfolio</a></li>
-          <li class="medium"><a href="">Contacts</a></li>
+          <li class="medium"><a href="" class="menu">Portfolio</a></li>
+          <li class="medium"><a href="" class="menu">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -46,36 +46,36 @@
       </address>
     </header>
     <main>
-      <section class="section1">
-        <h1 class="title1">Effective Solutions for Your Business</h1>
+      <section class="section_1">
+        <h1 class="title_1">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <section>
         <h2>Our goals</h2>
         <ul>
           <li>
-            <h3 class="title2">Strategy</h3>
+            <h3 class="title_2">Strategy</h3>
             <p class="section2_paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="title_2">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="title_2">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="title_2">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -84,17 +84,17 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="titlu2">Our Team</h2>
+        <h2 class="title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team">
             <img
               src="./images/Mark_Guerrero.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
-             class="team"
+             
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="title_2">Mark Guerrero</h3>
             <p class="our_team">Product Designer</p>
           </li>
           <li>
@@ -105,7 +105,7 @@
               height="260"
               class="team"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="title_2">Tom Ford</h3>
             <p class="our_team">Frontend Developer</p>
           </li>
           <li>
@@ -116,7 +116,7 @@
               height="260"
               class="team"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="title_2">Camila Garcia</h3>
             <p class="our_team">Marketing</p>
           </li>
           <li>
@@ -127,13 +127,13 @@
               height="260"
               class="team"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="title_2">Daniel Wilson</h3>
             <p class="our_team">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2 class="title4">Our Portofolio</h2>
+        <h2 class="title_4">Our Portofolio</h2>
         <ul>
           <li class="our_portofolio">
             <img
@@ -143,7 +143,7 @@
               height="300"
               class="portfolio"
             />
-            <h3 class="subtitle4">Banking App</h3>
+            <h3 class="subtitle_4">Banking App</h3>
             <p class="portofolio_paragraph">App</p>
           </li>
           <li>
@@ -154,8 +154,8 @@
               height="300"
               class="portfolio"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle_4">Cashless Payment</h3>
+            <p class="portofolio_paragraph">Marketing</p>
           </li>
           <li>
             <img
@@ -165,8 +165,8 @@
               height="300"
               class="portfolio"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="subtitle_4">Meditation App</h3>
+            <p class="portofolio_paragraph">App</p>
           </li>
           <li>
             <img
@@ -176,8 +176,8 @@
               height="300"
               class="portfolio"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle_4">Taxi Service</h3>
+            <p class="portofolio_paragraph">Marketing</p>
           </li>
           <li>
             <img
@@ -187,8 +187,8 @@
               height="300"
               class="portfolio"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle_4">Screen Illustrations</h3>
+            <p class="portofolio_paragraph">Design</p>
           </li>
           <li>
             <img
@@ -198,8 +198,8 @@
               height="300"
               class="portfolio"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle_4">Online Courses</h3>
+            <p class="portofolio_paragraph">Marketing</p>
           </li>
         </ul>
       </section>
