--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </li>
         </ul>
       </section>
-      <section class="team">
+      <section>
         <h2 class="title">Our Team</h2>
         <ul>
           <li>
