--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section_three">
         <h2 class="title">Our Team</h2>
         <ul>
-          <li class="team">
+          <li>
             <img
               src="./images/Mark_Guerrero.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
-             
+              class="team"
             />
             <h3 class="title_two">Mark Guerrero</h3>
             <p class="our_team">Product Designer</p>
           </li>
-          <li class="team">
+          <li>
             <img
               src="./images/Tom_Ford.jpg"
               alt="Photo Tom Ford"
@@ -108,7 +108,7 @@
             <h3 class="title_two">Tom Ford</h3>
             <p class="our_team">Frontend Developer</p>
           </li>
-          <li class="team">
+          <li>
             <img
               src="./images/Camila_Garcia.jpg"
               alt="Photo Camila Garcia"
@@ -119,7 +119,7 @@
             <h3 class="title_two">Camila Garcia</h3>
             <p class="our_team">Marketing</p>
           </li>
-          <li class="team">
+          <li>
             <img
               src="./images/Daniel_Wilson.jpg"
               alt="Photo Daniel Wilson"
