--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3 class="title_two">Mark Guerrero</h3>
             <p class="our_team">Product Designer</p>
           </li>
-          <li>
+          <li class="team">
             <img
               src="./images/Tom_Ford.jpg"
               alt="Photo Tom Ford"
@@ -111,7 +111,7 @@
             <h3 class="title_two">Tom Ford</h3>
             <p class="our_team">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team">
             <img
               src="./images/Camila_Garcia.jpg"
               alt="Photo Camila Garcia"
@@ -121,7 +121,7 @@
             <h3 class="title_two">Camila Garcia</h3>
             <p class="our_team">Marketing</p>
           </li>
-          <li>
+          <li class="team">
             <img
               src="./images/Daniel_Wilson.jpg"
               alt="Photo Daniel Wilson"
